# Ros2_mars

./: (task2)README.md  (task3)README.md  (task4)README.md  README.md  frames_2025-06-10_13.13.00.gv  frames_2025-06-19_17.56.38.gv
src/install/: local_setup.sh  setup.sh
src/install/my_robo1_py_pkg/share/my_robo1_py_pkg/: package.bash  package.sh  package.xml
src/install/my_robo1_py_pkg/share/my_robo1_py_pkg/launch/: my_robo1.launch.py
src/install/my_robo1_py_pkg/share/my_robo1_py_pkg/urdf/: my_robo1.urdf.xacro
src/log/: latest_build
src/mars_week1_cpp_pkg/: CMakeLists.txt  package.xml
src/mars_week1_cpp_pkg/launch/: number_square_launch.py
src/mars_week1_cpp_pkg/src/: number_publisher.cpp  square_subscriber.cpp
src/my_robo1_py_pkg/: frames_2025-06-09_13.22.21.gv  package.xml  setup.cfg  setup.py
src/my_robo1_py_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robo1_py_pkg/install/my_robo1_py_pkg/lib/my_robo1_py_pkg/: test_path
src/my_robo1_py_pkg/install/my_robo1_py_pkg/share/my_robo1_py_pkg/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/my_robo1_py_pkg/install/my_robo1_py_pkg/share/my_robo1_py_pkg/launch/: gazebo.launch.py  my_gazebo.launch.py  my_robo1.launch.py
src/my_robo1_py_pkg/install/my_robo1_py_pkg/share/my_robo1_py_pkg/urdf/: my_robo1.urdf.xacro
src/my_robo1_py_pkg/install/my_robo1_py_pkg/share/my_robo1_py_pkg/worlds/: my_gazebo.world
src/my_robo1_py_pkg/launch/: my_gazebo.launch.py  my_robo1.launch.py
src/my_robo1_py_pkg/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robo1_py_pkg/launch/log/: latest_build
src/my_robo1_py_pkg/log/: latest_build
src/my_robo1_py_pkg/my_robo1_py_pkg/: object_detection_node.py  obstacle_stop_node.py
src/my_robo1_py_pkg/my_robo1_py_pkg/install/: local_setup.sh  setup.sh
src/my_robo1_py_pkg/my_robo1_py_pkg/log/: latest_build
src/my_robo1_py_pkg/urdf/: my_robo1.urdf.xacro
src/my_robo1_py_pkg/worlds/: my_gazebo.world
